--- a/index.html
+++ b/index.html
@@ -1,347 +1,79 @@
 <!DOCTYPE html>
 <html lang="vi">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Christmas Snow Magic 🎄</title>
+<meta charset="UTF-8">
+<title>Điền KPI DONE</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
-
-  <style>
+<style>
     body {
-      margin: 0;
-      height: 100vh;
-      background:
-        radial-gradient(circle at top, rgba(255, 255, 255, 0.15), transparent 40%),
-        linear-gradient(180deg, #0f2027, #203a43, #2c5364);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
-      font-family: 'Dancing Script', cursive;
-      color: white;
+        margin: 0;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+        overflow: hidden;
+        font-family: 'Segoe UI', sans-serif;
     }
 
-    /* ===== SNOW ===== */
-    .snow {
-      position: absolute;
-      top: -10px;
-      color: white;
-      opacity: 0.9;
-      cursor: pointer;
-      animation: fall linear infinite;
-      transition: transform 0.6s ease, opacity 0.6s ease, filter 0.6s;
+    .kpi-text {
+        font-size: 72px;
+        font-weight: 900;
+        color: #ffffff;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+
+        /* 3D nổi */
+        text-shadow:
+            1px 1px 0 #ccc,
+            2px 2px 0 #bbb,
+            3px 3px 0 #aaa,
+            4px 4px 0 #999,
+            5px 5px 15px rgba(0,0,0,0.6);
+
+        animation: float 3s ease-in-out infinite,
+                   glow 2s ease-in-out infinite alternate;
     }
 
-    /* ❄ Tan khi chạm chuột */
-    .snow:hover {
-      transform: scale(0);
-      opacity: 0;
-      filter: blur(4px);
+    @keyframes float {
+        0%   { transform: translateY(0); }
+        50%  { transform: translateY(-15px); }
+        100% { transform: translateY(0); }
     }
 
-    /* rơi */
-    @keyframes fall {
-      to {
-        transform: translateY(110vh);
-      }
+    @keyframes glow {
+        from {
+            text-shadow:
+                1px 1px 0 #ccc,
+                3px 3px 10px rgba(0,255,255,0.4),
+                0 0 20px rgba(0,255,255,0.6);
+        }
+        to {
+            text-shadow:
+                1px 1px 0 #ccc,
+                3px 3px 20px rgba(0,255,255,0.8),
+                0 0 35px rgba(0,255,255,1);
+        }
     }
-
-    /* ===== LIGHTS ===== */
-    .light {
-      position: absolute;
-      width: 12px;
-      height: 12px;
-      border-radius: 50%;
-      background: rgba(255, 215, 0, 0.8);
-      box-shadow: 0 0 20px rgba(255, 215, 0, 0.8);
-      animation: twinkle 2s infinite alternate;
-    }
-
-    @keyframes twinkle {
-      from {
-        opacity: .3;
-        transform: scale(0.8);
-      }
-
-      to {
-        opacity: 1;
-        transform: scale(1.2);
-      }
-    }
-
-    /* ===== GIFT ===== */
-    .gift {
-      position: relative;
-      cursor: pointer;
-      animation: ring 0.8s infinite;
-      z-index: 2;
-    }
-
-    @keyframes ring {
-      0% {
-        transform: rotate(0deg);
-      }
-
-      25% {
-        transform: rotate(2deg);
-      }
-
-      50% {
-        transform: rotate(0deg);
-      }
-
-      75% {
-        transform: rotate(-2deg);
-      }
-
-      100% {
-        transform: rotate(0deg);
-      }
-    }
-
-    .gift.open {
-      animation: none;
-    }
-
-    /* box */
-    .box {
-      width: 150px;
-      height: 110px;
-      background: #c1121f;
-      border-radius: 10px;
-      position: relative;
-    }
-
-    .ribbon-v,
-    .ribbon-h {
-      position: absolute;
-      background: gold;
-    }
-
-    .ribbon-v {
-      width: 22px;
-      height: 100%;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-
-    .ribbon-h {
-      height: 22px;
-      width: 100%;
-      top: 42%;
-    }
-
-    /* lid */
-    .lid {
-      position: absolute;
-      width: 160px;
-      height: 38px;
-      background: #9b0d18;
-      top: -32px;
-      left: -5px;
-      border-radius: 10px;
-      transform-origin: bottom;
-      transition: transform 0.8s ease;
-    }
-
-    .gift.open .lid {
-      transform: rotateX(120deg);
-    }
-
-    /* glow */
-    .glow {
-      position: absolute;
-      inset: -70px;
-      background: radial-gradient(circle, rgba(255, 215, 0, 0.6), transparent 70%);
-      opacity: 0;
-      transition: 0.6s;
-    }
-
-    .gift.open .glow {
-      opacity: 1;
-    }
-
-    /* glitter */
-    .glitter {
-      position: absolute;
-      width: 6px;
-      height: 6px;
-      background: gold;
-      border-radius: 50%;
-      box-shadow: 0 0 8px gold;
-      animation: spread 1.8s ease-out forwards;
-    }
-
-    @keyframes spread {
-      from {
-        transform: translate(0, 0) scale(1);
-        opacity: 1;
-      }
-
-      to {
-        transform: translate(var(--x), var(--y)) scale(0.3);
-        opacity: 0;
-      }
-    }
-
-    /* caption */
-    .caption {
-      position: absolute;
-      top: -30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(255, 255, 255, 0.18);
-      padding: 16px 24px;
-      border-radius: 18px;
-      width: 280px;
-      text-align: center;
-      font-size: 22px;
-      opacity: 0;
-      transition: 0.8s;
-    }
-
-    .gift.open .caption {
-      top: -210px;
-      opacity: 1;
-    }
-
-    /* ❄ tuyết mặc định */
-    .snow {
-      position: absolute;
-      top: -10px;
-      color: white;
-      opacity: 0.9;
-      cursor: pointer;
-      animation: fall linear infinite;
-      padding: 4px;
-    }
-
-    /* khi tan */
-    .snow.melt {
-      animation: meltSpread 1s forwards;
-    }
-
-    /* rơi */
-    @keyframes fall {
-      to {
-        transform: translateY(110vh);
-      }
-    }
-
-    /* 🔥 TAN RA XUNG QUANH */
-    @keyframes meltSpread {
-      0% {
-        transform: scale(1) rotate(0deg);
-        opacity: 1;
-        filter: blur(0);
-      }
-
-      40% {
-        transform: scale(1.25) rotate(12deg);
-        opacity: 0.8;
-      }
-
-      100% {
-        transform: scale(0) rotate(-25deg);
-        opacity: 0;
-        filter: blur(6px);
-      }
-    }
-  </style>
+</style>
 </head>
 
 <body>
 
-  <!-- Đèn Noel -->
-  <script>
-    for (let i = 0; i < 70; i++) {
-      const s = document.createElement("div");
-      s.className = "snow";
-      s.innerHTML = "❄";
-      s.style.left = Math.random() * 100 + "vw";
-      s.style.fontSize = Math.random() * 14 + 10 + "px";
-      s.style.animationDuration = Math.random() * 5 + 5 + "s";
-      s.addEventListener("mouseenter", () => {
-        if (s.classList.contains("melt")) return;
-        s.style.animation = "none"; // ⛔ dừng rơi
-        s.classList.add("melt"); // 🔥 chạy keyframe tan
-        setTimeout(() => s.remove(), 800); // ❌ biến mất hoàn toàn
-      });
-      document.body.appendChild(s);
-    }
-  </script>
+<div class="kpi-text" id="kpi">
+    Điền KPI DONE
+</div>
 
-  <!-- Tuyết có thể tan -->
-  <script>
-    for (let i = 0; i < 70; i++) {
-      const s = document.createElement("div");
-      s.className = "snow";
-      s.innerHTML = "❄";
-      s.style.left = Math.random() * 100 + "vw";
-      s.style.fontSize = Math.random() * 14 + 10 + "px";
-      s.style.animationDuration = Math.random() * 5 + 5 + "s";
-      document.body.appendChild(s);
-    }
-  </script>
+<script>
+    // Hiệu ứng rung nhẹ khi click
+    const text = document.getElementById("kpi");
 
-  <!-- 🎁 Gift -->
-  <div class="gift" id="gift">
-    <div class="glow"></div>
-
-    <div class="caption">
-      🎄 Merry Christmas 🎄<br>
-      Ngay cả tuyết cũng tan<br>
-      khi chạm vào yêu thương ❤️
-      <h1>Love iu Simple</h1>
-    </div>
-
-    <div class="lid"></div>
-    <div class="box">
-      <div class="ribbon-v"></div>
-      <div class="ribbon-h"></div>
-    </div>
-  </div>
-
-  <script>
-    const gift = document.getElementById("gift");
-    gift.addEventListener("click", () => {
-      if (gift.classList.contains("open")) {
-        // ĐANG MỞ → ĐÓNG
-        gift.classList.remove("open");
-      } else {
-        // ĐANG ĐÓNG → MỞ
-        gift.classList.add("open");
-        glitterBurst();
-      }
+    text.addEventListener("click", () => {
+        text.style.animation = "none";
+        text.offsetHeight; // reset animation
+        text.style.animation = "float 3s ease-in-out infinite, glow 2s ease-in-out infinite alternate";
     });
-    /* Kim tuyến lan tỏa */
-    for (let i = 0; i < 70; i++) {
-      const s = document.createElement("div");
-      s.className = "snow";
-      s.innerHTML = "❄";
-      s.style.left = Math.random() * 100 + "vw";
-      s.style.fontSize = Math.random() * 14 + 10 + "px";
-      s.style.top = "-20px";
-      // ⛔ CHƯA CHO RƠI
-      s.style.animation = "none";
-      document.body.appendChild(s);
-      // ✅ FRAME SAU MỚI CHO RƠI
-      requestAnimationFrame(() => {
-        s.style.animation = `fall ${Math.random()*5+5}s linear infinite`;
-      });
-      // Hover tan
-      s.addEventListener("mouseenter", () => {
-        if (s.classList.contains("melt")) return;
-        s.style.animation = "none";
-        s.classList.add("melt");
-        setTimeout(() => s.remove(), 800);
-      });
-    }
-  </script>
+</script>
 
 </body>
-
 </html>
->
